--- a/03-events/index.html
+++ b/03-events/index.html
@@ -7,18 +7,19 @@
     <title>Events</title>
   </head>
   <body>
-    <div class="random-numbers">
-      <h1>Random Numbers</h1>
-      <ul>
-        <!-- insert your random numbers list here -->
-      </ul>
+    <div class="container">
+      <div class="random-numbers">
+        <h1>Random Numbers</h1>
+        <ul>
+          <!-- insert your random numbers list here -->
+        </ul>
+      </div>
+      <div class="actions">
+        <a href="#" class="btn">sort</a>
+        <a href="#" class="btn">odd</a>
+        <a href="#" class="btn">even</a>
+      </div>
     </div>
-    <div class="actions">
-      <a href="#" class="btn">sort</a>
-      <a href="#" class="btn">odd</a>
-      <a href="#" class="btn">even</a>
-    </div>
-
     <script src="script.js"></script>
   </body>
 </html>
